fix for safari dark mode gradient bug

--- a/ehroller/styles/main.css
+++ b/ehroller/styles/main.css
@@ -155,17 +155,17 @@ button.round::before {
 }
 
 button.plus::before {
-	background-image: linear-gradient(var(--primary-text-color), var(--primary-text-color)), linear-gradient(var(--primary-text-color), var(--primary-text-color));
+	background-image: linear-gradient(var(--primary-text-color) 0%, var(--primary-text-color) 0%), linear-gradient(var(--primary-text-color) 0%, var(--primary-text-color) 0%);
 	background-size: 20% 60%, 60% 20%;
 }
 
 button.minus::before {
-	background-image: linear-gradient(var(--primary-text-color), var(--primary-text-color));
+	background-image: linear-gradient(var(--primary-text-color) 0%, var(--primary-text-color) 0%);
 	background-size: 60% 20%;
 }
 
 button.times::before {
-	background-image: linear-gradient(var(--primary-text-color), var(--primary-text-color)), linear-gradient(var(--primary-text-color), var(--primary-text-color));
+	background-image: linear-gradient(var(--primary-text-color) 0%, var(--primary-text-color) 0%), linear-gradient(var(--primary-text-color) 0%, var(--primary-text-color) 0%);
 	background-size: 20% 60%, 60% 20%;
 	transform: rotate(45deg);
 }
